@@ -16,6 +16,7 @@
 #include "../core/Json.hpp"
 #include "../core/String.hpp"
 #include "../drawing/Drawing.h"
+#include "../drawing/Image.h"
 #include "../localisation/Localisation.h"
 #include "../world/Location.hpp"
 #include "ObjectManager.h"
